fixing heading spacing
the spacing for my api link was acting weird... so i cook out my grid classes and just used basic flex styling... also plus i added a hover effect on my api

--- a/frontend/sass/pages/_home.scss
+++ b/frontend/sass/pages/_home.scss
@@ -3,6 +3,10 @@ header{
     color: #fff;
     text-align: center;
     padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
 }
 
 header a{
@@ -10,6 +14,14 @@ header a{
     text-decoration: wavy underline 1px;
     text-underline-offset: 8px;
     font-size: 20px;
+    position: absolute;
+    right: 30px;
+}
+
+header a:hover{
+    color: #610849;
+    transform: scale(1.05) translateY(-5px);
+    transition: all 0.3s ease;
 }
 
 footer{
